[package]
name = "display-link"
version = "0.2.0"
authors = ["tyler <tyler@brainiumstudios.com>"]
edition = "2018"
keywords = ["CVDisplayLink", "CADisplayLink", "ios", "macos", "apple"]
description = "rusty bindings to apples CADisplayLink/CVDisplayLink interface"
license = "MIT"
repository = "http://github.com/BrainiumLLC/display-link"
documentation = "https://docs.rs/display-link"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
foreign-types = "0.3.2"
time-point = "0.1.1"

[target.'cfg(any(target_os = "ios"))'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
